--- a/form.html
+++ b/form.html
@@ -181,6 +181,12 @@
               <input type="checkbox" name="cantchangepw" value="1"> Benutzer können ihr Passwort nicht ändern
             </label>
           </div><hr/>
+
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" name="forcepwallusers" value="1"> Passwörter bestehender Benutzer überschreiben
+            </label>
+          </div><hr/>
       </div>
       
       
