--- a/form.html
+++ b/form.html
@@ -15,7 +15,11 @@
 
         <div class="checkbox">
             <label><input type="checkbox" name="ignorefirstline" value="1" checked>Soll die erste Zeile ignoriert werden?</label>
-          </div>
+        </div>
+
+        <div class="checkbox">
+            <label><input type="checkbox" name="encoding" value="1">Ist die Datei in UTF8 kodiert?</label>
+        </div>
         
           <div class="form-group">
             <label for="csv_aufbau">Wie ist Ihr CSV aufgebaut?</label>
